# ImebraAndroidViewer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/top/imebra/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/top/imebra/: MainActivity.kt  PushToImebraPipe.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/top/imebra/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
imebraLibrary/: AndroidManifest.xml  CMakeLists.txt  build.gradle  build.xml  gradlew  gradlew.bat  java_wrapper.cxx  project.properties
imebraLibrary/gradle/wrapper/: gradle-wrapper.properties
imebraLibrary/jni/: Android.mk  Application.mk
imebraLibrary/src/com/imebra/: Age.java  AssociationBase.java  AssociationMessage.java  AssociationSCP.java  AssociationSCU.java  BaseStreamInput.java  BaseStreamOutput.java  BaseUIDGenerator.java  CCancelCommand.java  CEchoCommand.java  CEchoResponse.java  CFindCommand.java  CFindResponse.java  CGetCommand.java  CGetResponse.java  CMoveCommand.java  CMoveResponse.java  CPartialResponse.java  CStoreCommand.java  CStoreResponse.java  CodecFactory.java  ColorTransformsFactory.java  DataSet.java  Date.java  DicomDictionary.java  DicomDir.java  DicomDirEntry.java  DimseCommand.java  DimseCommandBase.java  DimseResponse.java  DimseService.java  DrawBitmap.java  FileStreamInput.java  FileStreamOutput.java  Groups.java  Image.java  LUT.java  Memory.java  MemoryPool.java  MemoryStreamInput.java  (+68 more)
imebraLibrary/src/com/top/imebra/: DicomEntity.java  DicomLoader.java  OnLoaderProcessListener.java
